--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -141,6 +141,10 @@
     <!-- Fim modalEmailSent -->
 
     {% include 'service-credit-modal/modal_consulta.html'%}
+    {% include 'service-credit-modal/modal_analise.html'%}
+    {% include 'service-credit-modal/modal_negativacao.html'%}
+    {% include 'service-credit-modal/modal_meproteja.html'%}
+    {% include 'service-credit-modal/modal_infobusca.html'%}
 
     <!-- Footer Section -->
     <section id="footer" class="footer-section">
@@ -158,8 +162,8 @@
               Av. Cel. Fernando Prestes, 60 - Centro,
               Pindamonhangaba - SP, 12400-240<br/>
               (12) 3522-7513<br/>
-              <a href="#">certificadodigitalvale@gmail.com</a><br/>
-              <a href="#">
+              <a href="mailto:certificadodigitalvale@gmail.com">certificadodigitalvale@gmail.com</a><br/>
+              <a href="https://www.facebook.com/certificadodigitalvale/" target="_blank">
                 <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
               </a>
             </p>
