--- a/source/templates/certificado-digital/ecnpj-acordeon.html
+++ b/source/templates/certificado-digital/ecnpj-acordeon.html
@@ -35,14 +35,14 @@
                   
                   <p>Por meio do portal e-CAC é possível:</p>
 
-                  <p><strong>CEI (Cadastro Específico do INSS)</strong><br/>
-                  Fazer inscrição, consultar e alterar o CEI (Cadastro Específico do INSS).</p>
+                  <h5>CEI (Cadastro Específico do INSS)</h5>
+                  <p>Fazer inscrição, consultar e alterar o CEI (Cadastro Específico do INSS).</p>
 
-                  <p><strong>Situação fiscal</strong><br/>
-                  Verificar a situação fiscal.</p>
+                  <h5>Situação fiscal</h5>
+                  <p>Verificar a situação fiscal.</p>
 
-                  <p><strong>2ª via das DCTF</strong><br/>
-                  Consultar a 2ª via das declarações DCTF (Declaração de Débitos e Créditos 
+                  <h5>2ª via das DCTF</h5>
+                  <p>Consultar a 2ª via das declarações DCTF (Declaração de Débitos e Créditos 
                   Tributários Federais), DIPJ (Declaração de Informações Econômico-fiscais da Pessoa 
                   Jurídica), DIRF (Declaração do Imposto sobre a Renda Retido na Fonte), DIMOB 
                   (Declaração de Informações sobre Atividades Imobiliárias), DITR (Declaração do 
