--- a/source/templates/service-credit-modal/modal_consulta.html
+++ b/source/templates/service-credit-modal/modal_consulta.html
@@ -1,59 +1,91 @@
 <!-- Modal -->
-<div class="modal fade" id="consulta" tabindex="-1" role="dialog" aria-labelledby="consultaLabel">
+<div class="modal fade modal-style" id="consulta" tabindex="-1" role="dialog" aria-labelledby="consultaLabel">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="consultaLabel">Modal title</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title" id="consultaLabel">CONSULTA CPF</h4>
       </div>
       <div class="modal-body">
-        CONSULTA CPF
-O CPF é o registro do cidadão na Receita Federal. Qualquer indício de fraude ou pendência é suficiente para prejudicar seu cotidiano e causar dores de cabeça. Por isso, use as consultas da Serasa Experian para conferir a situação do seu nome e a dos seus clientes.
-
-Consulta de CPF para Empresa:
-A consulta permite que sua empresa tenha acesso ao histórico de inadimplência do consumidor. Assim, é possível autorizar ou não a concessão de crédito com menor risco ao seu negócio.
-
-Serviços Serasa Experian:
-Planos personalizados para consultar CPFs;
-Situação financeira do CPF;
-Saber o status do documento a cada nova alteração;
-Desburocratização para consultar documentos e oferecer crédito.
-
-Importância do CPF
-O Cadastro de Pessoas Físicas armazena as informações de uma pessoa nos sistemas da Receita Federal. Por isso, para se proteger contra possíveis fraudes, é importante realizar a consulta do CPF em sistemas confiáveis. A Serasa Experian tem alta credibilidade e fornece informações para análise de crédito e validação de dados para empresas de todos os setores e portes. Evite fraudes ao utilizar as consultas de CPF da Serasa Experian de modo rápido e seguro!
-
-Consulta de CPF para Pessoa Física
-A Serasa Experian tem a experiência necessária para ajudá-lo na consulta do seu CPF. Assim, você saberá o que acontece com seu nome.
-Como consultar um CPF?
-É necessário apresentar o número do Cadastro Nacional de Pessoa Física(CPF). 
-É possível consultar, também, por meio de procuração ou carta. 
-Caso queira conferir apenas a situação cadastral do seu CPF, você pode acessar o próprio site da Receita Federal.
-
-----------------------------------------------------
-
-
-CONSULTA CNPJ
-O Cadastro Nacional de Pessoa Jurídica é o registro junto à Receita Federal que compreende dados como Razão Social, data de abertura e outras informações de sua empresa. Mantenha-se na legalidade e proteja seu CNPJ contra tentativas de fraude com a ajuda da Serasa Experian.
-
-
-Consulta de CNPJ para Empresas
-A Consulta ao CNPJ é importante para as empresas e pessoas físicas que precisam verificar a situação de uma companhia perante a Receita Federal.
-
-Com a consulta você pode:
-Acessar diversas informações sobre uma empresa;
-Verificar a situação cadastral da empresa na Receita Federal;
-Averiguar se o estabelecimento possui processos judiciais e dívidas vencidas.
-A pesquisa de CNPJ permite consultar informações como o nome da empresa, o endereço em que ela está cadastrada, a data em que foi aberta, a descrição de sua atividade econômica, qual é a sua natureza jurídica e também verificar sua situação cadastral na Receita Federal.
-A partir da consulta de CNPJ é possível verificar se uma empresa possui, por exemplo, processos judiciais e dívidas em atraso. A Serasa Experian gera um relatório com os dados pertinentes sobre a empresa, como localização, pendências comerciais, protestos e, quando há anotação negativa, envia um informe com essas informações detalhadas.
-
-Como realizar a consulta de CNPJ
-É necessário ter o número do Cadastro Nacional de Pessoa Jurídica (CNPJ) para acessar as informações jurídicas e financeiras de determinada empresa. 
-Também é possível obter as informações pessoalmente na Serasa Experian. Nesse caso, é necessário apresentar um dos seguintes documentos CPF, RG, Carteira de Trabalho ou Carteira Nacional de Habilitação (CNH) e cópias simples do cartão do CNPJ e o contrato social ou estatuto da empresa.
-
+        <p>O CPF é o registro do cidadão na Receita Federal. Qualquer indício de 
+        fraude ou pendência é suficiente para prejudicar seu cotidiano e causar 
+        dores de cabeça. Por isso, use as consultas da Serasa Experian para conferir 
+        a situação do seu nome e a dos seus clientes.</p>
+        <hr/>
+        <h6>Consulta de CPF para Empresa:</h6>
+        <p>A consulta permite que sua empresa tenha acesso ao histórico de 
+        inadimplência do consumidor. Assim, é possível autorizar ou não a concessão 
+        de crédito com menor risco ao seu negócio.</p>
+        <hr/>
+        <h6>Serviços Serasa Experian:</h6>
+        <ul>
+          <li>Planos personalizados para consultar CPFs;</li>
+          <li>Situação financeira do CPF;</li>
+          <li>Saber o status do documento a cada nova alteração;</li>
+          <li>Desburocratização para consultar documentos e oferecer crédito.</li>
+        </ul>
+        <hr/>
+        <h6>Importância do CPF</h6>
+        <p>O Cadastro de Pessoas Físicas armazena as informações de uma pessoa nos sistemas 
+        da Receita Federal. Por isso, para se proteger contra possíveis fraudes, 
+        é importante realizar a consulta do CPF em sistemas confiáveis. A Serasa Experian 
+        tem alta credibilidade e fornece informações para análise de crédito e validação 
+        de dados para empresas de todos os setores e portes. Evite fraudes ao utilizar 
+        as consultas de CPF da Serasa Experian de modo rápido e seguro!</p>
+        <hr/>
+        <h6>Consulta de CPF para Pessoa Física</h6>
+        <p>A Serasa Experian tem a experiência necessária para ajudá-lo na consulta do 
+        seu CPF. Assim, você saberá o que acontece com seu nome.</p>
+       <hr/> 
+        <h6>Como consultar um CPF?</h6>
+        <p>É necessário apresentar o número do Cadastro Nacional de Pessoa Física(CPF). 
+        É possível consultar, também, por meio de procuração ou carta. 
+        Caso queira conferir apenas a situação cadastral do seu CPF, você pode acessar
+        o próprio site da Receita Federal.</p>
+        <hr/>
+        <h4 class="modal-title h4-body" id="consultaLabel">CONSULTA CNPJ</h4>
+        <p>O Cadastro Nacional de Pessoa Jurídica é o registro junto à Receita Federal que 
+        compreende dados como Razão Social, data de abertura e outras informações 
+        de sua empresa. Mantenha-se na legalidade e proteja seu CNPJ contra tentativas 
+        de fraude com a ajuda da Serasa Experian.</p>
+        <hr/>
+        <h6>Consulta de CNPJ para Empresas</h6>
+        <p>A Consulta ao CNPJ é importante para as empresas e pessoas físicas que precisam 
+        verificar a situação de uma companhia perante a Receita Federal.</p>
+        <hr/>
+        <h6>Com a consulta você pode:</h6>
+          <ul>
+            <li>Acessar diversas informações sobre uma empresa;</li>
+            <li>Verificar a situação cadastral da empresa na Receita Federal;</li>
+            <li>Averiguar se o estabelecimento possui processos judiciais e dívidas vencidas.</li>
+          </ul>
+        <p>A pesquisa de CNPJ permite consultar informações como o nome da empresa, o endereço 
+        em que ela está cadastrada, a data em que foi aberta, a descrição de sua atividade 
+        econômica, qual é a sua natureza jurídica e também verificar sua situação cadastral 
+        na Receita Federal. A partir da consulta de CNPJ é possível verificar se uma empresa 
+        possui, por exemplo, processos judiciais e dívidas em atraso. A Serasa Experian gera 
+        um relatório com os dados pertinentes sobre a empresa, como localização, pendências 
+        comerciais, protestos e, quando há anotação negativa, envia um informe com essas informações 
+        detalhadas.</p>
+        <hr/>
+        <h6>Como realizar a consulta de CNPJ</h6>
+        <p>É necessário ter o número do Cadastro Nacional de Pessoa Jurídica (CNPJ) para acessar
+        as informações jurídicas e financeiras de determinada empresa. 
+        Também é possível obter as informações pessoalmente na Serasa Experian. Nesse caso, 
+        é necessário apresentar um dos seguintes documentos: 
+        <ul>
+          <li>CPF</li>
+          <li>RG</li>
+          <li>Carteira de Trabalho ou Carteira Nacional de Habilitação (CNH)</li>
+          <li>Cópias simples do cartão do CNPJ</li>
+          <li>Contrato social ou estatuto da empresa.</li>
+        </ul>
+        <hr class="hr-last"></hr>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">FECHAR</button>
       </div>
     </div>
   </div>
