--- a/source/templates/home/home.html
+++ b/source/templates/home/home.html
@@ -128,12 +128,12 @@
           <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0">
             <div class="jumbotron">
               <div class="jumbotron-photo"><img src="{% static 'img/consulta.png' %}"></div>
-             <div class="jumbotron-contents">
-               <h1>Consulta de CPF / CNPJ</h1>
-               <h3>Acesso rápido e fácil às informações de clientes e empresas.</h3>
-               <p>Acesso ao maior banco de dados da América Latina. Consultas ao CPF 
-               ou CNPJ dos seus clientes, parceiros e fornecedores.</p>
-               <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#consulta">SAIBA MAIS</button>
+              <div class="jumbotron-contents">
+                <h1>Consulta de CPF / CNPJ</h1>
+                <h3>Acesso rápido e fácil às informações de clientes e empresas.</h3>
+                <p>Acesso ao maior banco de dados da América Latina. Consultas ao CPF 
+                ou CNPJ dos seus clientes, parceiros e fornecedores.</p>
+                <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#consulta">SAIBA MAIS</button>
              </div>
             </div>
           </div>
@@ -146,7 +146,7 @@
                     <h4>Análise de Crédito</h4>
                     <p>Acesse informações válidas, pelos dados cadastrais, 
                     para atualização de cadastro e liberação de crédito aos clientes.</p>
-                    <button type="button" class="btn btn-primary btn-block">SAIBA MAIS</button>
+                    <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#analise">SAIBA MAIS</button>
                   </div>
                 </div>
               </div>
@@ -157,7 +157,7 @@
                     <h4>Negativação de devedores</h4>
                     <p>Inclua anotações de devedores na maior base de dados de 
                     consultas utilizada no Brasil.</p>
-                    <button type="button" class="btn btn-primary btn-block">SAIBA MAIS</button>
+                    <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#negativacao">SAIBA MAIS</button>
                   </div>
                 </div>
               </div>
@@ -170,7 +170,7 @@
                     <h4>MeProteja CPF/CNPJ</h4>
                     <p>Monitoramento e alertas 24 horas por dia sobre consultas, 
                     dívidas ou riscos de fraude em seu CPF.</p>
-                    <button type="button" class="btn btn-primary btn-block">SAIBA MAIS</button>
+                    <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#meproteja">SAIBA MAIS</button>
                   </div>
                 </div>
               </div>
@@ -181,7 +181,7 @@
                     <h4>InfoBusca</h4>
                     <p>Relatório completo e atualizado do CNPJ da sua empresa e 
                     até 3 sócios. Evite fraudes que atrapalham os negócios.</p>
-                    <button type="button" class="btn btn-primary btn-block">SAIBA MAIS</button>
+                    <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#infobusca">SAIBA MAIS</button>
                   </div>
                 </div>
               </div>
